project_soln/Project 2 Skeleton Code (1) (2)/parser.output
Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';'

    3 optional_variable: variable optional_variable
    4                  | ε

    5 variable: IDENTIFIER ':' type IS statement ';'

    6 parameters: ε
    7           | parameters_list

    8 parameters_list: parameters_list ',' IDENTIFIER ':' type
    9                | IDENTIFIER ':' type

   10 type: INTEGER
   11     | BOOLEAN
   12     | REAL

   13 body: BEGIN_ statement_ END ';'

   14 statement_: statement ';'
   15           | error ';'

   16 statement: expression
   17          | REDUCE operator reductions ENDREDUCE
   18          | IF expression THEN statement_ ELSE statement_ ENDIF
   19          | CASE expression IS case_list OTHERWISE ARROW statement_ ENDCASE
   20          | WHILE expression DO statement_ END ';'
   21          | FOR IDENTIFIER ASSIGNMENT expression BY expression WHILE expression DO statement_ END ';'
   22          | REPEAT statement_seq UNTIL expression ';'
   23          | NULL_STATEMENT ';'

   24 case_list: WHEN INT_LITERAL ARROW statement_ case_list
   25          | ε

   26 operator: ADDOP
   27         | MULOP
   28         | RELOP

   29 reductions: reductions statement_
   30           | ε

   31 expression: expression ANDOP relation
   32           | relation

   33 relation: relation RELOP term
   34         | term

   35 term: term ADDOP factor
   36     | factor

   37 factor: factor MULOP primary
   38       | primary

   39 primary: '(' expression ')'
   40        | INT_LITERAL
   41        | REAL_LITERAL
   42        | BOOL_LITERAL
   43        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 39
    ')' (41) 39
    ',' (44) 8
    ':' (58) 5 8 9
    ';' (59) 2 5 13 14 15 20 21 22 23
    error (256) 15
    IDENTIFIER (258) 2 5 8 9 21 43
    INT_LITERAL (259) 24 40
    REAL_LITERAL (260) 41
    BOOL_LITERAL (261) 42
    ADDOP (262) 26 35
    MULOP (263) 27 37
    RELOP (264) 28 33
    ANDOP (265) 31
    IS (266) 5 19
    REAL (267) 12
    BEGIN_ (268) 13
    BOOLEAN (269) 11
    END (270) 13 20 21
    ENDREDUCE (271) 17
    FUNCTION (272) 2
    INTEGER (273) 10
    REDUCE (274) 17
    RETURNS (275) 2
    ASSIGNMENT (276) 21
    IF (277) 18
    THEN (278) 18
    ELSE (279) 18
    ENDIF (280) 18
    CASE (281) 19
    WHEN (282) 24
    ARROW (283) 19 24
    OTHERWISE (284) 19
    ENDCASE (285) 19
    WHILE (286) 20 21
    DO (287) 20 21
    FOR (288) 21
    BY (289) 21
    REPEAT (290) 22
    UNTIL (291) 22
    NULL_STATEMENT (292) 23
    statement_seq (293) 22


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    function (45)
        on left: 1
        on right: 0
    function_header (46)
        on left: 2
        on right: 1
    optional_variable (47)
        on left: 3 4
        on right: 1 3
    variable (48)
        on left: 5
        on right: 3
    parameters (49)
        on left: 6 7
        on right: 2
    parameters_list (50)
        on left: 8 9
        on right: 7 8
    type (51)
        on left: 10 11 12
        on right: 2 5 8 9
    body (52)
        on left: 13
        on right: 1
    statement_ (53)
        on left: 14 15
        on right: 13 18 19 20 21 24 29
    statement (54)
        on left: 16 17 18 19 20 21 22 23
        on right: 5 14
    case_list (55)
        on left: 24 25
        on right: 19 24
    operator (56)
        on left: 26 27 28
        on right: 17
    reductions (57)
        on left: 29 30
        on right: 17 29
    expression (58)
        on left: 31 32
        on right: 16 18 19 20 21 22 31 39
    relation (59)
        on left: 33 34
        on right: 31 32 33
    term (60)
        on left: 35 36
        on right: 33 34 35
    factor (61)
        on left: 37 38
        on right: 35 36 37
    primary (62)
        on left: 39 40 41 42 43
        on right: 37 38


State 0

    0 $accept: • function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION • IDENTIFIER parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function • $end

    $end  shift, and go to state 5


State 3

    1 function: function_header • optional_variable body

    IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 4 (optional_variable)

    optional_variable  go to state 7
    variable           go to state 8


State 4

    2 function_header: FUNCTION IDENTIFIER • parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 6 (parameters)

    parameters       go to state 10
    parameters_list  go to state 11


State 5

    0 $accept: function $end •

    $default  accept


State 6

    5 variable: IDENTIFIER • ':' type IS statement ';'

    ':'  shift, and go to state 12


State 7

    1 function: function_header optional_variable • body

    BEGIN_  shift, and go to state 13

    body  go to state 14


State 8

    3 optional_variable: variable • optional_variable

    IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 4 (optional_variable)

    optional_variable  go to state 15
    variable           go to state 8


State 9

    9 parameters_list: IDENTIFIER • ':' type

    ':'  shift, and go to state 16


State 10

    2 function_header: FUNCTION IDENTIFIER parameters • RETURNS type ';'

    RETURNS  shift, and go to state 17


State 11

    7 parameters: parameters_list •
    8 parameters_list: parameters_list • ',' IDENTIFIER ':' type

    ','  shift, and go to state 18

    $default  reduce using rule 7 (parameters)


State 12

    5 variable: IDENTIFIER ':' • type IS statement ';'

    REAL     shift, and go to state 19
    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21

    type  go to state 22


State 13

   13 body: BEGIN_ • statement_ END ';'

    error           shift, and go to state 23
    IDENTIFIER      shift, and go to state 24
    INT_LITERAL     shift, and go to state 25
    REAL_LITERAL    shift, and go to state 26
    BOOL_LITERAL    shift, and go to state 27
    REDUCE          shift, and go to state 28
    IF              shift, and go to state 29
    CASE            shift, and go to state 30
    WHILE           shift, and go to state 31
    FOR             shift, and go to state 32
    REPEAT          shift, and go to state 33
    NULL_STATEMENT  shift, and go to state 34
    '('             shift, and go to state 35

    statement_  go to state 36
    statement   go to state 37
    expression  go to state 38
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 14

    1 function: function_header optional_variable body •

    $default  reduce using rule 1 (function)


State 15

    3 optional_variable: variable optional_variable •

    $default  reduce using rule 3 (optional_variable)


State 16

    9 parameters_list: IDENTIFIER ':' • type

    REAL     shift, and go to state 19
    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21

    type  go to state 43


State 17

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS • type ';'

    REAL     shift, and go to state 19
    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21

    type  go to state 44


State 18

    8 parameters_list: parameters_list ',' • IDENTIFIER ':' type

    IDENTIFIER  shift, and go to state 45


State 19

   12 type: REAL •

    $default  reduce using rule 12 (type)


State 20

   11 type: BOOLEAN •

    $default  reduce using rule 11 (type)


State 21

   10 type: INTEGER •

    $default  reduce using rule 10 (type)


State 22

    5 variable: IDENTIFIER ':' type • IS statement ';'

    IS  shift, and go to state 46


State 23

   15 statement_: error • ';'

    ';'  shift, and go to state 47


State 24

   43 primary: IDENTIFIER •

    $default  reduce using rule 43 (primary)


State 25

   40 primary: INT_LITERAL •

    $default  reduce using rule 40 (primary)


State 26

   41 primary: REAL_LITERAL •

    $default  reduce using rule 41 (primary)


State 27

   42 primary: BOOL_LITERAL •

    $default  reduce using rule 42 (primary)


State 28

   17 statement: REDUCE • operator reductions ENDREDUCE

    ADDOP  shift, and go to state 48
    MULOP  shift, and go to state 49
    RELOP  shift, and go to state 50

    operator  go to state 51


State 29

   18 statement: IF • expression THEN statement_ ELSE statement_ ENDIF

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    expression  go to state 52
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 30

   19 statement: CASE • expression IS case_list OTHERWISE ARROW statement_ ENDCASE

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    expression  go to state 53
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 31

   20 statement: WHILE • expression DO statement_ END ';'

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    expression  go to state 54
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 32

   21 statement: FOR • IDENTIFIER ASSIGNMENT expression BY expression WHILE expression DO statement_ END ';'

    IDENTIFIER  shift, and go to state 55


State 33

   22 statement: REPEAT • statement_seq UNTIL expression ';'

    statement_seq  shift, and go to state 56


State 34

   23 statement: NULL_STATEMENT • ';'

    ';'  shift, and go to state 57


State 35

   39 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    expression  go to state 58
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 36

   13 body: BEGIN_ statement_ • END ';'

    END  shift, and go to state 59


State 37

   14 statement_: statement • ';'

    ';'  shift, and go to state 60


State 38

   16 statement: expression •
   31 expression: expression • ANDOP relation

    ANDOP  shift, and go to state 61

    $default  reduce using rule 16 (statement)


State 39

   32 expression: relation •
   33 relation: relation • RELOP term

    RELOP  shift, and go to state 62

    $default  reduce using rule 32 (expression)


State 40

   34 relation: term •
   35 term: term • ADDOP factor

    ADDOP  shift, and go to state 63

    $default  reduce using rule 34 (relation)


State 41

   36 term: factor •
   37 factor: factor • MULOP primary

    MULOP  shift, and go to state 64

    $default  reduce using rule 36 (term)


State 42

   38 factor: primary •

    $default  reduce using rule 38 (factor)


State 43

    9 parameters_list: IDENTIFIER ':' type •

    $default  reduce using rule 9 (parameters_list)


State 44

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type • ';'

    ';'  shift, and go to state 65


State 45

    8 parameters_list: parameters_list ',' IDENTIFIER • ':' type

    ':'  shift, and go to state 66


State 46

    5 variable: IDENTIFIER ':' type IS • statement ';'

    IDENTIFIER      shift, and go to state 24
    INT_LITERAL     shift, and go to state 25
    REAL_LITERAL    shift, and go to state 26
    BOOL_LITERAL    shift, and go to state 27
    REDUCE          shift, and go to state 28
    IF              shift, and go to state 29
    CASE            shift, and go to state 30
    WHILE           shift, and go to state 31
    FOR             shift, and go to state 32
    REPEAT          shift, and go to state 33
    NULL_STATEMENT  shift, and go to state 34
    '('             shift, and go to state 35

    statement   go to state 67
    expression  go to state 38
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 47

   15 statement_: error ';' •

    $default  reduce using rule 15 (statement_)


State 48

   26 operator: ADDOP •

    $default  reduce using rule 26 (operator)


State 49

   27 operator: MULOP •

    $default  reduce using rule 27 (operator)


State 50

   28 operator: RELOP •

    $default  reduce using rule 28 (operator)


State 51

   17 statement: REDUCE operator • reductions ENDREDUCE

    $default  reduce using rule 30 (reductions)

    reductions  go to state 68


State 52

   18 statement: IF expression • THEN statement_ ELSE statement_ ENDIF
   31 expression: expression • ANDOP relation

    ANDOP  shift, and go to state 61
    THEN   shift, and go to state 69


State 53

   19 statement: CASE expression • IS case_list OTHERWISE ARROW statement_ ENDCASE
   31 expression: expression • ANDOP relation

    ANDOP  shift, and go to state 61
    IS     shift, and go to state 70


State 54

   20 statement: WHILE expression • DO statement_ END ';'
   31 expression: expression • ANDOP relation

    ANDOP  shift, and go to state 61
    DO     shift, and go to state 71


State 55

   21 statement: FOR IDENTIFIER • ASSIGNMENT expression BY expression WHILE expression DO statement_ END ';'

    ASSIGNMENT  shift, and go to state 72


State 56

   22 statement: REPEAT statement_seq • UNTIL expression ';'

    UNTIL  shift, and go to state 73


State 57

   23 statement: NULL_STATEMENT ';' •

    $default  reduce using rule 23 (statement)


State 58

   31 expression: expression • ANDOP relation
   39 primary: '(' expression • ')'

    ANDOP  shift, and go to state 61
    ')'    shift, and go to state 74


State 59

   13 body: BEGIN_ statement_ END • ';'

    ';'  shift, and go to state 75


State 60

   14 statement_: statement ';' •

    $default  reduce using rule 14 (statement_)


State 61

   31 expression: expression ANDOP • relation

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    relation  go to state 76
    term      go to state 40
    factor    go to state 41
    primary   go to state 42


State 62

   33 relation: relation RELOP • term

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    term     go to state 77
    factor   go to state 41
    primary  go to state 42


State 63

   35 term: term ADDOP • factor

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    factor   go to state 78
    primary  go to state 42


State 64

   37 factor: factor MULOP • primary

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    primary  go to state 79


State 65

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 66

    8 parameters_list: parameters_list ',' IDENTIFIER ':' • type

    REAL     shift, and go to state 19
    BOOLEAN  shift, and go to state 20
    INTEGER  shift, and go to state 21

    type  go to state 80


State 67

    5 variable: IDENTIFIER ':' type IS statement • ';'

    ';'  shift, and go to state 81


State 68

   17 statement: REDUCE operator reductions • ENDREDUCE
   29 reductions: reductions • statement_

    error           shift, and go to state 23
    IDENTIFIER      shift, and go to state 24
    INT_LITERAL     shift, and go to state 25
    REAL_LITERAL    shift, and go to state 26
    BOOL_LITERAL    shift, and go to state 27
    ENDREDUCE       shift, and go to state 82
    REDUCE          shift, and go to state 28
    IF              shift, and go to state 29
    CASE            shift, and go to state 30
    WHILE           shift, and go to state 31
    FOR             shift, and go to state 32
    REPEAT          shift, and go to state 33
    NULL_STATEMENT  shift, and go to state 34
    '('             shift, and go to state 35

    statement_  go to state 83
    statement   go to state 37
    expression  go to state 38
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 69

   18 statement: IF expression THEN • statement_ ELSE statement_ ENDIF

    error           shift, and go to state 23
    IDENTIFIER      shift, and go to state 24
    INT_LITERAL     shift, and go to state 25
    REAL_LITERAL    shift, and go to state 26
    BOOL_LITERAL    shift, and go to state 27
    REDUCE          shift, and go to state 28
    IF              shift, and go to state 29
    CASE            shift, and go to state 30
    WHILE           shift, and go to state 31
    FOR             shift, and go to state 32
    REPEAT          shift, and go to state 33
    NULL_STATEMENT  shift, and go to state 34
    '('             shift, and go to state 35

    statement_  go to state 84
    statement   go to state 37
    expression  go to state 38
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 70

   19 statement: CASE expression IS • case_list OTHERWISE ARROW statement_ ENDCASE

    WHEN  shift, and go to state 85

    $default  reduce using rule 25 (case_list)

    case_list  go to state 86


State 71

   20 statement: WHILE expression DO • statement_ END ';'

    error           shift, and go to state 23
    IDENTIFIER      shift, and go to state 24
    INT_LITERAL     shift, and go to state 25
    REAL_LITERAL    shift, and go to state 26
    BOOL_LITERAL    shift, and go to state 27
    REDUCE          shift, and go to state 28
    IF              shift, and go to state 29
    CASE            shift, and go to state 30
    WHILE           shift, and go to state 31
    FOR             shift, and go to state 32
    REPEAT          shift, and go to state 33
    NULL_STATEMENT  shift, and go to state 34
    '('             shift, and go to state 35

    statement_  go to state 87
    statement   go to state 37
    expression  go to state 38
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 72

   21 statement: FOR IDENTIFIER ASSIGNMENT • expression BY expression WHILE expression DO statement_ END ';'

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    expression  go to state 88
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 73

   22 statement: REPEAT statement_seq UNTIL • expression ';'

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    expression  go to state 89
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 74

   39 primary: '(' expression ')' •

    $default  reduce using rule 39 (primary)


State 75

   13 body: BEGIN_ statement_ END ';' •

    $default  reduce using rule 13 (body)


State 76

   31 expression: expression ANDOP relation •
   33 relation: relation • RELOP term

    RELOP  shift, and go to state 62

    $default  reduce using rule 31 (expression)


State 77

   33 relation: relation RELOP term •
   35 term: term • ADDOP factor

    ADDOP  shift, and go to state 63

    $default  reduce using rule 33 (relation)


State 78

   35 term: term ADDOP factor •
   37 factor: factor • MULOP primary

    MULOP  shift, and go to state 64

    $default  reduce using rule 35 (term)


State 79

   37 factor: factor MULOP primary •

    $default  reduce using rule 37 (factor)


State 80

    8 parameters_list: parameters_list ',' IDENTIFIER ':' type •

    $default  reduce using rule 8 (parameters_list)


State 81

    5 variable: IDENTIFIER ':' type IS statement ';' •

    $default  reduce using rule 5 (variable)


State 82

   17 statement: REDUCE operator reductions ENDREDUCE •

    $default  reduce using rule 17 (statement)


State 83

   29 reductions: reductions statement_ •

    $default  reduce using rule 29 (reductions)


State 84

   18 statement: IF expression THEN statement_ • ELSE statement_ ENDIF

    ELSE  shift, and go to state 90


State 85

   24 case_list: WHEN • INT_LITERAL ARROW statement_ case_list

    INT_LITERAL  shift, and go to state 91


State 86

   19 statement: CASE expression IS case_list • OTHERWISE ARROW statement_ ENDCASE

    OTHERWISE  shift, and go to state 92


State 87

   20 statement: WHILE expression DO statement_ • END ';'

    END  shift, and go to state 93


State 88

   21 statement: FOR IDENTIFIER ASSIGNMENT expression • BY expression WHILE expression DO statement_ END ';'
   31 expression: expression • ANDOP relation

    ANDOP  shift, and go to state 61
    BY     shift, and go to state 94


State 89

   22 statement: REPEAT statement_seq UNTIL expression • ';'
   31 expression: expression • ANDOP relation

    ANDOP  shift, and go to state 61
    ';'    shift, and go to state 95


State 90

   18 statement: IF expression THEN statement_ ELSE • statement_ ENDIF

    error           shift, and go to state 23
    IDENTIFIER      shift, and go to state 24
    INT_LITERAL     shift, and go to state 25
    REAL_LITERAL    shift, and go to state 26
    BOOL_LITERAL    shift, and go to state 27
    REDUCE          shift, and go to state 28
    IF              shift, and go to state 29
    CASE            shift, and go to state 30
    WHILE           shift, and go to state 31
    FOR             shift, and go to state 32
    REPEAT          shift, and go to state 33
    NULL_STATEMENT  shift, and go to state 34
    '('             shift, and go to state 35

    statement_  go to state 96
    statement   go to state 37
    expression  go to state 38
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 91

   24 case_list: WHEN INT_LITERAL • ARROW statement_ case_list

    ARROW  shift, and go to state 97


State 92

   19 statement: CASE expression IS case_list OTHERWISE • ARROW statement_ ENDCASE

    ARROW  shift, and go to state 98


State 93

   20 statement: WHILE expression DO statement_ END • ';'

    ';'  shift, and go to state 99


State 94

   21 statement: FOR IDENTIFIER ASSIGNMENT expression BY • expression WHILE expression DO statement_ END ';'

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    expression  go to state 100
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 95

   22 statement: REPEAT statement_seq UNTIL expression ';' •

    $default  reduce using rule 22 (statement)


State 96

   18 statement: IF expression THEN statement_ ELSE statement_ • ENDIF

    ENDIF  shift, and go to state 101


State 97

   24 case_list: WHEN INT_LITERAL ARROW • statement_ case_list

    error           shift, and go to state 23
    IDENTIFIER      shift, and go to state 24
    INT_LITERAL     shift, and go to state 25
    REAL_LITERAL    shift, and go to state 26
    BOOL_LITERAL    shift, and go to state 27
    REDUCE          shift, and go to state 28
    IF              shift, and go to state 29
    CASE            shift, and go to state 30
    WHILE           shift, and go to state 31
    FOR             shift, and go to state 32
    REPEAT          shift, and go to state 33
    NULL_STATEMENT  shift, and go to state 34
    '('             shift, and go to state 35

    statement_  go to state 102
    statement   go to state 37
    expression  go to state 38
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 98

   19 statement: CASE expression IS case_list OTHERWISE ARROW • statement_ ENDCASE

    error           shift, and go to state 23
    IDENTIFIER      shift, and go to state 24
    INT_LITERAL     shift, and go to state 25
    REAL_LITERAL    shift, and go to state 26
    BOOL_LITERAL    shift, and go to state 27
    REDUCE          shift, and go to state 28
    IF              shift, and go to state 29
    CASE            shift, and go to state 30
    WHILE           shift, and go to state 31
    FOR             shift, and go to state 32
    REPEAT          shift, and go to state 33
    NULL_STATEMENT  shift, and go to state 34
    '('             shift, and go to state 35

    statement_  go to state 103
    statement   go to state 37
    expression  go to state 38
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 99

   20 statement: WHILE expression DO statement_ END ';' •

    $default  reduce using rule 20 (statement)


State 100

   21 statement: FOR IDENTIFIER ASSIGNMENT expression BY expression • WHILE expression DO statement_ END ';'
   31 expression: expression • ANDOP relation

    ANDOP  shift, and go to state 61
    WHILE  shift, and go to state 104


State 101

   18 statement: IF expression THEN statement_ ELSE statement_ ENDIF •

    $default  reduce using rule 18 (statement)


State 102

   24 case_list: WHEN INT_LITERAL ARROW statement_ • case_list

    WHEN  shift, and go to state 85

    $default  reduce using rule 25 (case_list)

    case_list  go to state 105


State 103

   19 statement: CASE expression IS case_list OTHERWISE ARROW statement_ • ENDCASE

    ENDCASE  shift, and go to state 106


State 104

   21 statement: FOR IDENTIFIER ASSIGNMENT expression BY expression WHILE • expression DO statement_ END ';'

    IDENTIFIER    shift, and go to state 24
    INT_LITERAL   shift, and go to state 25
    REAL_LITERAL  shift, and go to state 26
    BOOL_LITERAL  shift, and go to state 27
    '('           shift, and go to state 35

    expression  go to state 107
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 105

   24 case_list: WHEN INT_LITERAL ARROW statement_ case_list •

    $default  reduce using rule 24 (case_list)


State 106

   19 statement: CASE expression IS case_list OTHERWISE ARROW statement_ ENDCASE •

    $default  reduce using rule 19 (statement)


State 107

   21 statement: FOR IDENTIFIER ASSIGNMENT expression BY expression WHILE expression • DO statement_ END ';'
   31 expression: expression • ANDOP relation

    ANDOP  shift, and go to state 61
    DO     shift, and go to state 108


State 108

   21 statement: FOR IDENTIFIER ASSIGNMENT expression BY expression WHILE expression DO • statement_ END ';'

    error           shift, and go to state 23
    IDENTIFIER      shift, and go to state 24
    INT_LITERAL     shift, and go to state 25
    REAL_LITERAL    shift, and go to state 26
    BOOL_LITERAL    shift, and go to state 27
    REDUCE          shift, and go to state 28
    IF              shift, and go to state 29
    CASE            shift, and go to state 30
    WHILE           shift, and go to state 31
    FOR             shift, and go to state 32
    REPEAT          shift, and go to state 33
    NULL_STATEMENT  shift, and go to state 34
    '('             shift, and go to state 35

    statement_  go to state 109
    statement   go to state 37
    expression  go to state 38
    relation    go to state 39
    term        go to state 40
    factor      go to state 41
    primary     go to state 42


State 109

   21 statement: FOR IDENTIFIER ASSIGNMENT expression BY expression WHILE expression DO statement_ • END ';'

    END  shift, and go to state 110


State 110

   21 statement: FOR IDENTIFIER ASSIGNMENT expression BY expression WHILE expression DO statement_ END • ';'

    ';'  shift, and go to state 111


State 111

   21 statement: FOR IDENTIFIER ASSIGNMENT expression BY expression WHILE expression DO statement_ END ';' •

    $default  reduce using rule 21 (statement)
